src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwP0.25-dhP0.5-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: P0.25\ndefault window height: P0.5\ntabbed"
expression: snapshot
---
initial configure:
size: 291 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 291 × 336, bounds: 1239 × 688, states: [Activated]
